fix: gap in Card

--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -1,5 +1,5 @@
 .courses {
-  font-family: 'Rubik';
+  font-family: "Rubik";
   display: flex;
   flex-direction: column;
   padding: 213px 240px;
@@ -11,15 +11,12 @@
   line-height: 57px;
   color: #2c415d;
 }
-.slider__card:first-child {
-  margin: 0;
-  margin-bottom: 42px;
-}
+
 .slider__card {
   border: 1px solid #e4e4e4;
-  margin-bottom: 42px;
 }
 .courses__table {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(452px, 1fr));
+  gap: 32px;
 }
