--- a/src/components/Main/Card/Card.css
+++ b/src/components/Main/Card/Card.css
@@ -1,9 +1,8 @@
 .slider__card {
   background-color: white;
   border-radius: 24px;
-  width: 500px;
   display: flex;
-  margin: 0 32px 0 0;
+  margin: 0;
 }
 
 .slider__card:first-child {
@@ -26,7 +25,7 @@
   width: 143px;
   height: 180px;
   background-blend-mode: hue, normal;
-  margin: 60px 32px 0 0;
+  padding: 60px 32px 0 0;
 }
 
 .slider__card-time {
