--- a/src/components/Main/Slider/Slider.css
+++ b/src/components/Main/Slider/Slider.css
@@ -43,4 +43,6 @@
 .slider__row {
   display: flex;
   margin: 0 auto;
+  column-gap: 32px;
+  row-gap: 32px;
 }
